# rag_rust

./: .gitignore  Cargo.toml  GEMINI.md  QWEN.md  README.md  check_output.txt  config.toml  config.toml.example  index_tracker.json  test_comprehensive.sh  test_proxy.sh  test_qwencli.sh  test_rag_proxy.sh  test_request.json  test_response_format.sh
src/: lib.rs  main.rs  qdrant_custom_client.rs  test_imports.rs  test_qdrant.rs
src/clients/: llm.rs  mod.rs  ollama.rs
src/common/: mod.rs
src/indexing/: chunker.rs  file_tracker.rs  indexer.rs  loader.rs  main.rs  mod.rs
src/rag_proxy/: handler.rs  llm_caller.rs  main.rs  mod.rs  passthrough_handler.rs  retriever.rs  server.rs
src/reset_documents/: main.rs
