[package]
name = "rag_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "index_documents"
path = "src/indexing/main.rs"

[[bin]]
name = "rag_proxy"
path = "src/rag_proxy/main.rs"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
docx-rs = "0.4"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
openai-rs = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-splitter = "0.28.0"
pdf-extract = "0.10.0"
toml = "0.9.8"
md-5 = "0.10.6"

[dev-dependencies]
tempfile = "3.23.0"
