[package]
name = "rag_rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "index_documents"
path = "src/indexing/main.rs"

[[bin]]
name = "rag_proxy"
path = "src/rag_proxy/main.rs"

[[bin]]
name = "reset_documents"
path = "src/reset_documents/main.rs"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full"] }
docx-rust = "0.1.10"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
openai-rs = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-splitter = "0.28.0"
pdf-extract = "0.10.0"
toml = "0.9.8"
md-5 = "0.10.6"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23.0"
